--- a/canvas/canvas.html
+++ b/canvas/canvas.html
@@ -43,7 +43,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase" style="text-shadow: 2px 2px 2px #000000">Detection of Small Programs in Viral Genomes</div>
+                <div class="masthead-heading text-uppercase" style="text-shadow: 2px 2px 2px #000000">The complexity landscape of viral genomes</div>
                 <a class="btn btn-success btn-xl text-uppercase js-scroll-trigger" href="#resources">Overview</a>
             </div>
         </header>
