--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <div class="jumbotron"> 
                 <h1 class="display-4 text-uppercase text-center" style="text-shadow: 2px 2px 2px #000000">ASILAB</h1>
-                <p class="lead"><strong>Algorithmic and Statistical Information Laboratory</strong></p>
+                <p class="lead"><strong class="bg-white">Algorithmic and Statistical Information Laboratory</strong></p>
         </header>
 
         <section class="page-section bg-light" id="portfolio">
