--- a/canvas/canvas.html
+++ b/canvas/canvas.html
@@ -228,11 +228,11 @@
                         </div>
                       </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <a class="carousel-control-prev bg-light" href="#carouselExampleCaptions" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <a class="carousel-control-next bg-light" href="#carouselExampleCaptions" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -4127,7 +4127,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-4 text-lg-center">
-                        <p class="text-center"> <small class="text-center text-muted">ALL RIGHTS RESERVED © 2020 UA.PT</small> </p>
+                        <p class="text-center"> <small class="text-center text-muted">ALL RIGHTS RESERVED © 2021 UA.PT</small> </p>
                 </div>
                 
             </div>
