--- a/canvas/canvas.html
+++ b/canvas/canvas.html
@@ -211,7 +211,7 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="assets/img/ViralAnalysis/Genome_NC_vs_Sequence_Length.jpg" class="d-block mx-auto w-75" alt="...">
+                        <img src="assets/img/ViralAnalysis/Boxplot_Genome.png" class="d-block mx-auto w-75" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5 class="text-dark"> NC by Genome Type</h5>
                           <a class="text-dark"> Average Normalized Compression (ANC) and average sequence length for each viral genome type. 
@@ -220,7 +220,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/img/ViralAnalysis/Viruses_NC_vs_Sequence_Length.jpg" class="d-block mx-auto w-75" alt="...">
+                        <img src="assets/img/ViralAnalysis/Boxplot_Realm.png" class="d-block mx-auto w-75" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5 class="text-dark">NC by Viral Realm</h5>
                           <a class="text-dark">Average Normalized Compression (ANC) and average sequence length for each viral Realm.
