--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="col">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="canvas/canvas.html"
+                            <a class="portfolio-link" data-toggle="modal" href="canvas/index.html"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
