--- a/canvas/index.html
+++ b/canvas/index.html
@@ -4069,6 +4069,14 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/5.jpeg" alt="" />
+                            <h4>Tânia Caetano</h4>
+                            <p class="text-muted">Researcher</p>
+                            <a class="btn btn-dark btn-social mx-2" href="http://www.cesam.ua.pt/index.php?tabela=pessoaldetail&menu=82&user=226"><i class="fab fa-chrome"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
                             <h4><Sect>Sérgio Matos</Sect></h4>
                             <p class="text-muted">Assistant Professor</p>
@@ -4097,7 +4105,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-9 text-lg-center">
-                        <p class="text-center"> <small class="text-center text-muted">This work was funded by National Funds through the FCT in the context of the project UID/CEC/00127/2019 and the research grant SFRH/BD/141851/2018. D.P. is funded by national funds through FCT - Fundação para a Ciência e a Tecnologia, I.P., under the Scientific Employment Stimulus - Institutional Call - CI-CTTI-94-ARH/2019.</small> 
+                        <p class="text-center"> <small class="text-center text-muted">This work was funded by National Funds through the FCT in the context of the project UID/CEC/00127/2019 and the research grant SFRH/BD/141851/2018. D.P. is funded by national funds through FCT - Fundação para a Ciência e a Tecnologia, I.P., under the Scientific Employment Stimulus - Institutional Call - CI-CTTI-94-ARH/2019.T.C. is funded by national funds (OE), through FCT – Fundação para a Ciência e a Tecnologia, I.P., in the scope of the framework contract foreseen in the numbers 4, 5 and 6 of the article 23, of the Decree-Law 57/2016, of August 29, changed by Law 57/2017, of July (CEECIND/01463/2017). Thanks are due to FCT/MCTES for the financial support to CESAM (UIDP/50017/2020+UIDB/50017/2020), through national funds. </small> 
                         </p>
                     </div> 
                 </div>
